--- a/app/src/main/res/layout/activity_rental_list.xml
+++ b/app/src/main/res/layout/activity_rental_list.xml
@@ -30,10 +30,12 @@
         android:fontFamily="@font/nanumsquareregular"
         android:includeFontPadding="false"
         android:letterSpacing="0.01"
-        android:paddingLeft="10dp"
+        android:paddingLeft="8dp"
         android:paddingTop="8dp"
         android:paddingRight="8dp"
         android:paddingBottom="8dp"
+        android:outlineProvider="none"
+        android:elevation="0dp"
         android:text="거리순"
         android:textColor="@color/agent_color_1NoOpp"
         android:textSize="13sp"
@@ -49,6 +51,7 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/bg_custom_button"
         android:drawableRight="@drawable/filter"
+        android:outlineProvider="none"
         android:drawablePadding="2dp"
         android:fontFamily="@font/nanumsquareregular"
         android:includeFontPadding="false"
@@ -89,13 +92,12 @@
         </androidx.core.widget.NestedScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+
     <!--TODO : 리스트가 없을시 디스플레이 되는 레이아웃-->
     <LinearLayout
         android:id="@+id/rental_list_empty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:layout_marginBottom="386dp"
         android:orientation="vertical"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -119,6 +121,8 @@
             android:textColor="#993e3e3e"
             android:textSize="16sp" />
     </LinearLayout>
+
+
 
 
     <!-- TODO 스크롤뷰에 리스트 적용 -->
