렌타카 딜리버리 맵 초기 로딩후 현재 위치 화면으로 변경

--- a/app/src/main/res/layout/activity_rental_pay_web.xml
+++ b/app/src/main/res/layout/activity_rental_pay_web.xml
@@ -36,7 +36,7 @@
         android:layout_below="@id/rental_item" />
 
     <ProgressBar
-        android:id="@+id/pb_item01"
+        android:id="@+id/rental_pb"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="fill_parent"
         android:layout_height="5dp"
